--- a/style.css
+++ b/style.css
@@ -1,9 +1,44 @@
-body{
-    color: blue;
+div {
+    padding: 1%;
 }
-#im_an_id{
-    color: white;
+
+table {
+    width: 30%;
+    border: solid;
+    border-color: black;
 }
-.im_a_class{
-    color: grey;
+
+tr, td {
+    border: solid;
+    border-color: black;
+}
+
+.head {
+    font-weight: bold;
+}
+
+td.first {
+    font-style: italic;
+}
+
+td {
+    width: 5%;
+}
+
+.outer-content {
+    margin-top: 20px;
+    background-color: pink;
+    width: 100%;
+    padding: 1%;
+}
+
+.inner-content {
+    background-color: lightblue;
+    width: 75%;
+    margin: auto;
+    text-align: center;
+}
+
+form {
+    padding: 1%;
 }
